--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "tp1-aw-verdu",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,5 +9,14 @@
   "license": "ISC",
   "devDependencies": {
     "five-server": "^0.3.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/GasparVerdu/tp1-aw-verdu.git"
+  },
+  "bugs": {
+    "url": "https://github.com/GasparVerdu/tp1-aw-verdu/issues"
+  },
+  "homepage": "https://github.com/GasparVerdu/tp1-aw-verdu#readme",
+  "description": ""
 }
